Horizontal scroll bar flickering fix (post div)

--- a/css/index.css
+++ b/css/index.css
@@ -159,7 +159,7 @@ html {
     width: 30vw;
     height: fit-content;
     max-height: 33vh;
-    overflow-y: hidden;
+    overflow: hidden;
     background: #1a1a1a99;
     border-radius: 10px;
     margin: 1vw;
